--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ h1, h2, h3, h4, h5, h6 {
   position: absolute;
   top: 50%;
   left: 50%;
+  box-shadow: 0px 0px 17px 11px rgba(0, 0, 0, 0.28);
   display: flex;
   flex-direction: column;
   transform: translate(-50%, -50%);
@@ -262,6 +263,266 @@ h1, h2, h3, h4, h5, h6 {
   background-position: left;
   background-size: cover;
 }
+.content .gray-block {
+  position: absolute;
+  height: 8px;
+  width: 8px;
+  top: 0;
+  left: 0;
+}
+.content .gray-block img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.content .gray-block:nth-child(1) {
+  height: 8px;
+  width: 24px;
+  top: 13%;
+  left: 57.5%;
+}
+.content .gray-block:nth-child(2) {
+  height: 8px;
+  width: 40px;
+  top: 13%;
+  left: 4%;
+}
+.content .gray-block:nth-child(3) {
+  height: 8px;
+  width: 61px;
+  top: 61%;
+  left: 57%;
+}
+.content .gray-block:nth-child(4) {
+  height: 11px;
+  width: 80px;
+  top: 49%;
+  left: 84.5%;
+}
+.content .gray-block:nth-child(5) {
+  height: 18px;
+  width: 207px;
+  top: 70%;
+  left: 3%;
+}
+.content .gray-block:nth-child(6) {
+  height: 18px;
+  width: 207px;
+  top: 5%;
+  left: 74%;
+}
+.content .gray-block:nth-child(7) {
+  height: 8px;
+  width: 8px;
+  top: 8%;
+  left: 12%;
+}
+.content .gray-block:nth-child(8) {
+  height: 8px;
+  width: 8px;
+  top: 8%;
+  left: 13%;
+}
+.content .gray-block:nth-child(9) {
+  height: 8px;
+  width: 8px;
+  top: 81%;
+  left: 85.5%;
+}
+.content .gray-block:nth-child(10) {
+  height: 8px;
+  width: 8px;
+  top: 81%;
+  left: 86.5%;
+}
+.content .gray-block:nth-child(11) {
+  height: 8px;
+  width: 8px;
+  top: 25%;
+  left: 4%;
+}
+.content .gray-block:nth-child(12) {
+  height: 40px;
+  width: 40px;
+  top: 6%;
+  left: 31%;
+}
+.content .gray-block:nth-child(13) {
+  height: 40px;
+  width: 40px;
+  top: 28%;
+  left: 79.5%;
+}
+.content .gray-block:nth-child(14) {
+  width: 80px;
+  height: 99px;
+  top: 59%;
+  left: 3%;
+}
+@media (max-width: 2300px) {
+  .content .gray-block:nth-child(1) {
+    height: 1px;
+    width: 9px;
+    top: 14%;
+    left: 57.5%;
+  }
+  .content .gray-block:nth-child(2) {
+    height: 8px;
+    width: 16px;
+    top: 13%;
+    left: 4%;
+  }
+  .content .gray-block:nth-child(3) {
+    height: 8px;
+    width: 25px;
+    top: 61%;
+    left: 57%;
+  }
+  .content .gray-block:nth-child(4) {
+    height: 11px;
+    width: 25px;
+    top: 49%;
+    left: 84.5%;
+  }
+  .content .gray-block:nth-child(5) {
+    height: 18px;
+    width: 106px;
+    top: 74%;
+    left: 3%;
+  }
+  .content .gray-block:nth-child(6) {
+    height: 18px;
+    width: 106px;
+    top: 5%;
+    left: 74%;
+  }
+  .content .gray-block:nth-child(7) {
+    height: 5px;
+    width: 5px;
+    top: 8%;
+    left: 12%;
+  }
+  .content .gray-block:nth-child(8) {
+    height: 5px;
+    width: 5px;
+    top: 8%;
+    left: 13%;
+  }
+  .content .gray-block:nth-child(9) {
+    height: 5px;
+    width: 5px;
+    top: 81%;
+    left: 85.5%;
+  }
+  .content .gray-block:nth-child(10) {
+    height: 5px;
+    width: 5px;
+    top: 81%;
+    left: 86.5%;
+  }
+  .content .gray-block:nth-child(11) {
+    height: 5px;
+    width: 5px;
+    top: 25%;
+    left: 4%;
+  }
+  .content .gray-block:nth-child(12) {
+    height: 25px;
+    width: 25px;
+    top: 6%;
+    left: 31%;
+  }
+  .content .gray-block:nth-child(13) {
+    height: 25px;
+    width: 25px;
+    top: 28%;
+    left: 79.5%;
+  }
+  .content .gray-block:nth-child(14) {
+    width: 57px;
+    height: 72px;
+    top: 59%;
+    left: 3%;
+  }
+}
+@media (max-width: 1750px) {
+  .content .gray-block:nth-child(14) {
+    width: 43px;
+    height: 69px;
+    top: 60%;
+    left: 3%;
+  }
+}
+@media (max-width: 1500px) {
+  .content .gray-block:nth-child(5) {
+    height: 18px;
+    width: 70px;
+    top: 74%;
+    left: 3%;
+  }
+  .content .gray-block:nth-child(6) {
+    height: 18px;
+    width: 70px;
+    top: 5%;
+    left: 74%;
+  }
+  .content .gray-block:nth-child(7) {
+    height: 3px;
+    width: 3px;
+    top: 8%;
+    left: 12%;
+  }
+  .content .gray-block:nth-child(8) {
+    height: 3px;
+    width: 3px;
+    top: 8%;
+    left: 13%;
+  }
+  .content .gray-block:nth-child(9) {
+    height: 3px;
+    width: 3px;
+    top: 81%;
+    left: 85.5%;
+  }
+  .content .gray-block:nth-child(10) {
+    height: 3px;
+    width: 3px;
+    top: 81%;
+    left: 86.5%;
+  }
+  .content .gray-block:nth-child(11) {
+    height: 3px;
+    width: 3px;
+    top: 25%;
+    left: 4%;
+  }
+  .content .gray-block:nth-child(12) {
+    height: 15px;
+    width: 15px;
+    top: 6%;
+    left: 31%;
+  }
+  .content .gray-block:nth-child(13) {
+    height: 15px;
+    width: 15px;
+    top: 28%;
+    left: 79.5%;
+  }
+  .content .gray-block:nth-child(14) {
+    width: 34px;
+    height: 99px;
+    top: 62%;
+    left: 3%;
+  }
+}
+@media (max-width: 1300px) {
+  .content .gray-block:nth-child(14) {
+    width: 25px;
+    height: 99px;
+    top: 62%;
+    left: 3%;
+  }
+}
 .content__container {
   width: 100%;
   height: 100%;
@@ -276,7 +537,7 @@ h1, h2, h3, h4, h5, h6 {
 .content__shirma {
   width: 100%;
   height: 100%;
-  background: rgba(255, 70, 86, 0.8);
+  background: rgba(255, 70, 86, 0.9);
 }
 .content__container1 {
   width: 115%;
@@ -311,6 +572,7 @@ h1, h2, h3, h4, h5, h6 {
 .content .character {
   width: 15%;
   position: relative;
+  box-shadow: 20px 20px 0px 0px rgba(0, 0, 0, 0.5);
 }
 .content .character__container {
   border: 2px solid #1F2326;
@@ -363,6 +625,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .content .character .white {
   background-color: white;
+  border: 2px solid #1F2326;
 }
 .content .character__bottom {
   position: absolute;
@@ -397,12 +660,80 @@ h1, h2, h3, h4, h5, h6 {
 .content .character .black {
   -webkit-text-stroke: 1.5px black;
 }
+@media (max-width: 1200px) {
+  .content .character {
+    box-shadow: 10px 10px 0px 0px rgba(0, 0, 0, 0.5);
+  }
+}
+@media (max-width: 2000px) {
+  .content .character {
+    box-shadow: 15px 15px 0px 0px rgba(0, 0, 0, 0.5);
+  }
+}
 
 .footer {
   width: 100%;
   height: 7.6%;
 }
 
+.bottom {
+  position: absolute;
+  top: 86%;
+  left: 10%;
+  display: flex;
+  width: 100%;
+  height: 17%;
+}
+.bottom__container {
+  width: 27%;
+  height: 100%;
+  background: url(../img/XXX.png);
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: cover;
+}
+.bottom__information {
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+  height: 100%;
+  padding-left: 10%;
+  padding-top: 10%;
+  padding: 4.2% 16.2% 0% 8%;
+}
+.bottom__left {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  width: 57%;
+  padding-bottom: 4.2%;
+  padding-right: 10.6%;
+}
+.bottom__title {
+  font-size: 40px;
+  line-height: 52px;
+  color: #C4C4C4;
+}
+.bottom__subtitle {
+  font-size: 24px;
+  line-height: 31px;
+  color: #000000;
+}
+.bottom__text {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0.1em;
+  color: #1F2326;
+}
+.bottom__right {
+  height: 100%;
+  width: 43%;
+  background: #FF4656;
+}
 #one img {
   width: 70%;
 }
