--- a/sours/style.scss
+++ b/sours/style.scss
@@ -88,7 +88,10 @@
     top: 50%;
     left: 50%;
     // overflow: hidden;
-    display: flex;
+    -webkit-box-shadow: 0px 0px 17px 11px rgba(0, 0, 0, 0.28);
+    -moz-box-shadow: 0px 0px 17px 11px rgba(0, 0, 0, 0.28);
+    box-shadow: 0px 0px 17px 11px rgba(0, 0, 0, 0.28);
+        display: flex;
     flex-direction: column;
     transform: translate(-50%,-50%);
         width: 86%;height: 73%;
@@ -201,6 +204,271 @@
         background-position: left;
         background-size: cover;
         
+        .gray-block{
+            // display: inline;
+            position: absolute;
+            height: 8px;
+            width: 8px;
+            top: 0;
+            left: 0;
+            img{
+                width: 100%;
+                // height: 100%;
+                object-fit: contain;
+            }
+        }
+        .gray-block:nth-child(1){
+            height: 8px;
+            width: 24px;
+            top: 13%;
+            left: 57.5%;
+        }
+        .gray-block:nth-child(2){
+            height: 8px;
+            width: 40px;
+            top: 13%;
+            left: 4%;
+        }
+        .gray-block:nth-child(3){
+            height: 8px;
+                width: 61px;
+                top: 61%;
+                left: 57%;
+        }
+        .gray-block:nth-child(4){
+            height: 11px;
+            width: 80px;
+            top: 49%;
+            left: 84.5%;
+        }
+        .gray-block:nth-child(5){
+            height: 18px;
+            width: 207px;
+            top: 70%;
+            left: 3%;
+        }
+        .gray-block:nth-child(6){
+            height: 18px;
+            width: 207px;
+            top: 5%;
+            left: 74%;
+        }
+        .gray-block:nth-child(7){
+            height: 8px;
+            width: 8px;
+            top: 8%;
+            left: 12%;
+        }
+        .gray-block:nth-child(8){
+            height: 8px;
+            width: 8px;
+            top: 8%;
+            left: 13%;
+        }
+        .gray-block:nth-child(9){
+            height: 8px;
+            width: 8px;
+            top: 81%;
+            left: 85.5%;
+        }
+        .gray-block:nth-child(10){
+            height: 8px;
+            width: 8px;
+            top: 81%;
+            left: 86.5%;
+        }
+        .gray-block:nth-child(11){
+            height: 8px;
+            width: 8px;
+            top: 25%;
+            left: 4%;
+        }
+        .gray-block:nth-child(12){
+            height: 40px;
+            width: 40px;
+            top: 6%;
+           left: 31%;
+        }
+        .gray-block:nth-child(13){
+            height: 40px;
+            width: 40px;
+            top: 28%;
+            left: 79.5%;
+        }
+        .gray-block:nth-child(14){
+            width: 80px;
+            height: 99px;
+            top: 59%;
+            left: 3%;
+        }
+        @media(max-width:2300px){
+            .gray-block:nth-child(1){
+            height: 1px;
+            width: 9px;
+            top: 14%;
+            left: 57.5%;
+            }
+            .gray-block:nth-child(2){
+                height: 8px;
+                width: 16px;
+                top: 13%;
+                left: 4%;
+            }
+            .gray-block:nth-child(3){
+                height: 8px;
+                    width: 25px;
+                    top: 61%;
+                    left: 57%;
+            }
+            .gray-block:nth-child(4){
+                height: 11px;
+                width: 25px;
+                top: 49%;
+                left: 84.5%;
+            }
+            .gray-block:nth-child(5){
+                height: 18px;
+                width: 106px;
+                top: 74%;
+                left: 3%;
+            }
+            .gray-block:nth-child(6){
+                height: 18px;
+                width: 106px;
+                top: 5%;
+                left: 74%;
+            }
+            .gray-block:nth-child(7){
+                height: 5px;
+                width: 5px;
+                top: 8%;
+                left: 12%;
+            }
+            .gray-block:nth-child(8){
+                height: 5px;
+                width: 5px;
+                top: 8%;
+                left: 13%;
+            }
+            .gray-block:nth-child(9){
+                height: 5px;
+                width: 5px;
+                top: 81%;
+                left: 85.5%;
+            }
+            .gray-block:nth-child(10){
+                height: 5px;
+                width: 5px;
+                top: 81%;
+                left: 86.5%;
+            }
+            .gray-block:nth-child(11){
+                height: 5px;
+                width: 5px;
+                top: 25%;
+                left: 4%;
+            }
+            .gray-block:nth-child(12){
+                height: 25px;
+                width: 25px;
+                top: 6%;
+               left: 31%;
+            }
+            .gray-block:nth-child(13){
+                height: 25px;
+                width: 25px;
+                top: 28%;
+                left: 79.5%;
+            }
+            .gray-block:nth-child(14){
+                width: 57px;
+                height: 72px;
+                top: 59%;
+                left: 3%;
+            }
+        }
+        @media(max-width:1750px){
+            .gray-block:nth-child(14){
+                width: 43px;
+                height: 69px;
+                top: 60%;
+                left: 3%;
+            
+            }
+        }
+        @media(max-width:1500px){
+            .gray-block:nth-child(5){
+            
+
+                height: 18px;
+                width: 70px;
+                top: 74%;
+                left: 3%;
+            }
+            .gray-block:nth-child(6){
+                height: 18px;
+                width: 70px;
+                top: 5%;
+                left: 74%;
+            }
+            .gray-block:nth-child(7){
+                height: 3px;
+                width: 3px;
+                top: 8%;
+                left: 12%;
+            }
+            .gray-block:nth-child(8){
+                height: 3px;
+                width: 3px;
+                top: 8%;
+                left: 13%;
+            }
+            .gray-block:nth-child(9){
+                height: 3px;
+                width: 3px;
+                top: 81%;
+                left: 85.5%;
+            }
+            .gray-block:nth-child(10){
+                height: 3px;
+                width: 3px;
+                top: 81%;
+                left: 86.5%;
+            }
+            .gray-block:nth-child(11){
+                height: 3px;
+                width: 3px;
+                top: 25%;
+                left: 4%;
+            }
+            .gray-block:nth-child(12){
+                height: 15px;
+                width: 15px;
+                top: 6%;
+               left: 31%;
+            }
+            .gray-block:nth-child(13){
+                height: 15px;
+                width: 15px;
+                top: 28%;
+                left: 79.5%;
+            }
+            .gray-block:nth-child(14){
+                width: 34px;
+                height: 99px;
+                top: 62%;
+                left: 3%;
+            }
+            
+        }
+        @media(max-width:1300px){
+            .gray-block:nth-child(14) {
+                    width: 25px;
+                    height: 99px;
+                    top: 62%;
+                    left: 3%;
+                }
+        }
         &__container{
             width: 100%;
             height: 100%;
@@ -219,7 +487,7 @@
         &__shirma{
             width: 100%;
             height: 100%;
-            background: rgba($color: #FF4656, $alpha: 0.8);
+            background: rgba($color: #FF4656, $alpha: 0.9);
             
 
 
@@ -256,6 +524,10 @@
         
             }
         }
+        &__bottom {
+           
+
+        }
         &__character {
             margin-right: 5%;
         }
@@ -263,6 +535,9 @@
             .character {
                 width: 15%;
                 position: relative;
+                box-shadow: 20px 20px 0px 0px rgba(0, 0, 0, 0.5);
+
+
 
             &__container{
                 border: 2px solid #1F2326;
@@ -323,6 +598,7 @@
 
             .white{
                 background-color: white;
+                border: 2px solid #1F2326;
             }
             &__top{}
             &__title { }
@@ -364,7 +640,16 @@
 
             }
             }
-          
+          @media(max-width:1200px){
+            .character{
+                box-shadow: 10px 10px 0px 0px rgba(0, 0, 0, 0.5);
+            }
+          }
+          @media(max-width:2000px){
+            .character{
+                box-shadow: 15px 15px 0px 0px rgba(0, 0, 0, 0.5);
+            }
+          }
             
     }
     .footer {
@@ -372,6 +657,91 @@
        height: 7.6%;
     }
     
+        .bottom {
+            // clip-path: 
+            // polygon(
+            //   0% 10%,     /* верхняя левая */
+            //   1% 0%,     /* верхняя левая */
+            //   100% 0%,    /* верхняя правая */
+            //   100% 100%,  /* нижняя правая */
+            //   0% 100%   /* нижняя левая */
+            // );
+
+
+            // background-color: white;
+            position: absolute;
+            top: 86%;
+            left: 10%;
+            display: flex;
+            width: 100%;
+            height: 17%;
+            // border: 1px solid black;
+        &__container{
+            width: 27%;
+            height: 100%;
+            background: url(../img/XXX.png);
+            background-repeat: no-repeat;
+            background-position: left;
+            background-size: cover;
+        }
+        &__information {
+            display: flex;
+            align-items: flex-end;
+           width: 100%;
+           height: 100%;
+            // border: 1px solid black;
+            padding-left: 10%;
+            padding-top: 10%;
+            padding: 4.2% 16.2% 0% 8%;
+        }
+        
+        &__left {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100%;
+            width: 57%;
+            padding-bottom: 4.2%;
+            padding-right: 10.6%;
+        }
+        
+                &__title {
+                    font-size: 40px;
+                    line-height: 52px;
+        
+                    color: #C4C4C4;
+                }
+        
+                &__subtitle {
+                    font-size: 24px;
+                    line-height: 31px;
+        
+                    color: #000000;
+                }
+        
+                &__text {
+                    font-family: 'Montserrat';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 16px;
+                    line-height: 20px;
+                    letter-spacing: 0.1em;
+        
+                    color: #1F2326;
+                }
+        
+        &__right {
+            
+            height: 100%;
+            width: 43%;
+            background: #FF4656;
+        }
+        
+        &__square {}
+        
+        &__image {}
+        }
+        
 
  #one{
     img{
