--- a/sours/style.scss
+++ b/sours/style.scss
@@ -671,18 +671,37 @@
             // background-color: white;
             position: absolute;
             top: 86%;
-            left: 10%;
+            left: 5%;
             display: flex;
             width: 100%;
             height: 17%;
             // border: 1px solid black;
+
+            &__next{
+                cursor: pointer;
+                height: 100%;
+                width: 8%;
+                background: url(../img/YYY.png);
+                background-repeat: no-repeat;
+                background-position: left;
+                background-size: contain;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                img{
+                    width: 10%;
+                    height: 10%;
+                    object-fit: contain;
+                }
+            }
         &__container{
+            margin-right: 3%;
             width: 27%;
             height: 100%;
             background: url(../img/XXX.png);
             background-repeat: no-repeat;
             background-position: left;
-            background-size: cover;
+            background-size: contain;
         }
         &__information {
             display: flex;
@@ -706,9 +725,9 @@
         }
         
                 &__title {
-                    font-size: 40px;
+                    font-size: 34px;
                     line-height: 52px;
-        
+                    text-transform: uppercase;
                     color: #C4C4C4;
                 }
         
@@ -729,17 +748,45 @@
         
                     color: #1F2326;
                 }
+         @media(max-width:2700px){
+            &__title{font-size: 32px; line-height: 20px;}
+            &__subtitle{font-size: 17px; line-height: 20px;}
+            &__text{font-size: 9px; line-height: 10px;}
+        }         
+        @media(max-width:2300px){
+            &__title{font-size: 24px;}
+            &__subtitle{font-size: 17px;}
+            &__text{font-size: 10px;}
+        }
+        @media(max-width:2200px){
+            &__title{font-size: 17px; line-height: 36px;}
+            &__subtitle{font-size: 13px; line-height: 20px;}
+            &__text{font-size: 9px; line-height: 10px;}
+        }
+        @media(max-width:1700px){
+            &__title{font-size: 17px; line-height: 32px;}
+            &__subtitle{font-size: 12px; line-height: 30px;}
+            &__text{font-size: 8px; line-height: 8px;}
+        }
+        @media(max-width:1410px){
+            &__title{font-size: 12px; line-height: 22px;}
+            &__subtitle{font-size: 9px; line-height: 20px;}
+            &__text{font-size: 6px; line-height: 8px;}
+        }
+
         
         &__right {
             
-            height: 100%;
-            width: 43%;
+                height: 84%;
+                width: 35%;
+                margin-bottom: 2px;
             background: #FF4656;
         }
         
-        &__square {}
+        &__square { width: 100%;height: 100%;}
         
-        &__image {}
+        &__image {position: relative; width: 100%;height: 100%;}
+        &__image img{position: absolute; width: 100%;height: 100%;object-fit: contain; top: -23%; left: 28%;}
         }
         
 
